# Changelog

## [1.0.0]
- New File menu
- New mapping/DPLC engine
- New ASM parser/writer
- Fixed a keycombination event bug [#29](/../../issues/29)
- Fixed corrupted art with transparent PNGs [#22](/../../issues/22)

## [0.0.8]
- Changed default palette from Sonic 2 to the SCH unified palette
- Fixed a bug that allows deleting mappings in drawing mode
- Fixed a bug where up/down scrolls when there are active mappings
- Fixed Kosinski-M compression
- Added KosinskiPlus compression
- Rebuilt colour picker

## [0.0.7]
- Added changelog
- Better error reporting & enabled devtools (F12)
- Compression now based on flamewing's mdcomp
    - Uses WASM and is much faster
    - Added ArtC42, LZKN1, Rocket and RLE compression formats
- Sort imported spritesheet into rows properly
- Autodismiss new mapping screen
- Tabs can be maximized
- Sprite swapping keyboard shortcuts added