@@ -1,3 +1,4 @@
+// @deprecated
 import { parseDef } from './definitions';
 import { errorMsg } from '#util/dialog';
 import flattenDeep from 'lodash/flattenDeep';
